--- a/src/web/blog/Dockerfile
+++ b/src/web/blog/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9.2-alpine
+FROM python:3.10.7-slim-buster
 
 RUN mkdir /var/www
 WORKDIR /var/www
@@ -6,4 +6,4 @@ WORKDIR /var/www
 COPY app .
 RUN pip install -r requirements.txt
 
-CMD ["python3", "./app.py"]
+CMD ["gunicorn", "-b", "0.0.0.0:8001", "app:app"]
