build(Web/blog/docker-compose.yml): service名とcontainer名を'web_blog_web'に変更

--- a/src/web/blog/docker-compose.yml
+++ b/src/web/blog/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
-  web:
-    container_name: "web"
+  web_blog_web:
+    container_name: "web_blog_web"
     build: .
     ports:
     - "8001:80"
